[package]
name = "hello-rs"
version = "0.1.0"
authors = ["Dan Ravensloft <dan.ravensloft@gmail.com>"]
edition = "2018"

[dependencies]
prussia_rt = { path = "../prussia_rt" }

[profile.dev]
panic = "abort"
#linker-flavor = "lld"

[profile.release]
panic = "abort"
#linker-flavor = "lld"

[package.metadata.cargo-xbuild]
memcpy = true
sysroot_path = "target/sysroot"
