[package]
name = "hello-rs"
version = "0.1.0"
authors = ["Dan Ravensloft <dan.ravensloft@gmail.com>"]
edition = "2018"

[dependencies]
panic-halt = "0.2.0"
prussia_rt = { path = "../prussia_rt" }
prussia_dma = { path = "../prussia_dma" }

[package.metadata.cargo-xbuild]
memcpy = true
sysroot_path = "target/sysroot"
